--- a/index.html
+++ b/index.html
@@ -15,21 +15,20 @@
 <body>
 
     <div></div>
-        <h1 class="title-class">แนะนำตัว</h1>
-        <div>
-            <img class="img" src="./image/profile.jpg" alt="teeraput">
-            <h1 class="title-class"> นายธีรภัทร กันทะคำ</h1>
-        </div>
-        <div class="title-class2">อายุ 15ปี</div>
-        <div class="title-class">กำลังศึกษาอยู่ชั้นมัทธมศึกษาปีที่3</div>
-        <div class="title-class2">วิชาที่ชอบ วิทยาศาสตร์</div>
-        <div class="title-class">วิชาที่ไม่ชอบ หน้าที่พลเมือง</div>
-        <div class="title-class2">Facebook-theeraphat kunthakham หรือ แหลมสิงห์</div>
-        <div class="title-class"> email fooktrr@gmail.com</div>
-
+    <h1 class="title-class">แนะนำตัว</h1>
+    <div>
+        <img class="img" src="./image/profile.jpg" alt="teeraput">
+        <h1 class="title-class"> นายธีรภัทร กันทะคำ</h1>
     </div>
-    <a class="title-class" href="https://www.facebook.com/">ไป</a>
-    <a class="title-class2" href="https://www.google.com/?hl=th">ออกไปซะ</a>
+    <div class="title-class2">อายุ 15ปี</div>
+    <div class="title-class">กำลังศึกษาอยู่ชั้นมัธยมศึกษาปีที่3</div>
+    <div class="title-class2">
+        <a href="https://www.facebook.com/theeraphat.kunthakham">FaceBook</a>
+    </div>
+    <div class="title-class">
+        <a href="mailto:fooktrr@gmail.com">Email</a>
+    </div>
+    </div>
 </body>
 
 </html>
