--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
 </head>
-
 <body>
 
     <div></div>
@@ -20,6 +19,7 @@
     </div>
     <div class="title-class2">อายุ 15ปี</div>
     <div class="title-class">กำลังศึกษาอยู่ชั้นมัธยมศึกษาปีที่3</div>
+    <div class="title-class">งานอดิเรก แต่งไรห์ม ร้องแร็ป</div>
     <div class="title-class2">
         <a href="https://www.facebook.com/theeraphat.kunthakham">FaceBook</a>
     </div>
@@ -30,6 +30,7 @@
 </body>
 
 </html>
+
 
 
 </html>
